# clips_app

./: .gitignore  Cargo.toml  Dockerfile  README.md
actix_upload/: Cargo.toml  README.md
actix_upload/src/: lib.rs
migrations/: 20220831004245_create_clips.down.sql  20220831004245_create_clips.up.sql  20220831215628_create_users.up.sql
src/: admin.rs  auth.rs  config.rs  db.rs  download.rs  index.rs  main.rs  s3.rs  upload.rs  view.rs
static/: index.html  styles.css
templates/: admin.html  clip.html  edit_clip.html  header.html  index.html  list.html  login.html  signup.html  upload.html
