[package]
name = "clips_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.1.0", features = ["openssl"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
openssl = "0.10.41"
tokio = { version = "1.20.1", features = ["full"] }
