[package]
name = "clips_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
#actix-form-data = "0.6.2"
actix-multipart = "0.4.0"
actix-web = { version = "4.1.0", features = ["openssl"] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
futures = "0.3.23"
mime = "0.3.16"
openssl = "0.10.41"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
futures-lite = "1.12.0"
async-fs = "1.6.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
