[package]
name = "clips_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
actix-multipart = "0.4.0"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
futures = "0.3.23"
mime = "0.3.16"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4", "fast-rng"] }
futures-lite = "1.12.0"
async-fs = "1.6.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "postgres" ] }
handlebars = { version = "4.3.3", features = ["dir_source"] }
serde_json = "1.0.85"
actix-identity = "0.5.2"
actix-session = { version = "0.7.1", features = ["redis-rs-session"] }
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
